# alpha_backend

./: .dockerignore  .gitignore  Cargo.toml  DATABASE_ACCESS.md  Dockerfile  LICENSE  OLLAMA_SETUP_GUIDE.md  README.en.md  README.md  README.ru.md  SYNC_FIX_GUIDE.md  app.db  docker-compose.yml  docker-entrypoint.sh
assets/: index.css  index.html  privacy_policy.md  privacy_policy.ru.md
src/: db.rs  i18n.rs  main.rs  state.rs
src/handlers/: analytics.rs  auth.rs  business.rs  chat.rs  files.rs  legal.rs  mod.rs  support.rs  telegram.rs
src/models/: conversation.rs  mod.rs  telegram_user.rs  user.rs
src/services/: fcm.rs  mod.rs  openai.rs  telegram.rs
