[package]
name = "business-assistant-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.20", features = ["macros", "fs"] }
actix-web = "4.4"
actix-cors = "0.7"
actix-multipart = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls", "multipart"] }
dotenvy = "0.15"
bcrypt = "0.17.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.9.2"
rust_xlsxwriter = "0.64.0"
base64 = "0.22.1"
futures-util = "0.3"
jsonwebtoken = "9.3"
